# cookiecutter-data-science

{{ cookiecutter.repo_name }}/: .pre-commit-config.yml  pyproject.toml
