[tool.poetry]
name = "{{ cookiecutter-repo-name }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }}"]
license = "{% if cookiecutter.open_source_license == 'MIT' %}MIT{% elif cookiecutter.open_source_license == 'BSD-3-Clause' %}BSD-3{% endif %}"
readme = "README.md"
packages = [{include = "{{ cookiecutter"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
Sphinx = "^6.1.3"
coverage = "^7.2.3"
awscli = "^1.27.114"
flake8 = "^6.0.0"
isort = "^5.12.0"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
