[tool.poetry]
name = "{{ cookiecutter-repo-name }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }}"]
license = "{% if cookiecutter.open_source_license == 'MIT' %}MIT{% elif cookiecutter.open_source_license == 'BSD-3-Clause' %}BSD-3{% endif %}"
readme = "README.md"
packages = [{include = "{{ cookiecutter"}]

[tool.poetry.dependencies]
python = "*"
click = "*"
Sphinx = "*"
coverage = "*"
awscli = "*"
flake8 = "*"
isort = "*"
black = "*"
pre-commit = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
